@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2005/02/27 12:03:09 veego Exp $
+# $NetBSD: Makefile,v 1.10 2005/02/27 22:30:43 veego Exp $
 
 DISTNAME=	transcode-0.6.12
-PKGREVISION=	4
+PKGREVISION=	5
 CATEGORIES=	multimedia
 MASTER_SITES=	http://dl.fkb.wormulon.net/transcode/ \
 		http://dl.kel.wormulon.net/transcode/
